--- a/index.html
+++ b/index.html
@@ -28,12 +28,23 @@ tags: home
   {% endif %}
 </div> -->
 
-<p align="center" >
+<!-- <p align="center" >
 <img width="400" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
 </p>
+ -->
 
+<h2>👋 Hi there, I'm Sawan!  </h2> 
+<h3>I'm a machine learning researcher with a focus on biomolecule design and optimization.
+Currently, I'm helping design novel targeting ligands for lipid nanoparticle delivery at Atom Bioworks 🧬.</h3>
 
-My name is Sawan Patel and I'm a recent MS graduate from the University of Michigan studying Computer Science & Engineering with a background in biology. I am from Massachusetts, where I studied neuroscience and computer science at Boston University. I am currently working alongside the Probabilistic Machine Learning group at the University of Michigan working towards a method leveraging amortized variational inference to solve the problem of deep-space telescope image cataloging. I have a great interest in the latest developments in neuroscience pertaining to spatial navigation, memory and vision in general. I also 
+When away from my computer, I'm plugging away at a book, (slowly) getting improving at the piano, or cooking something new 🍳. 
+Things I'm passionate about:
+
+- Learning. My grandfather, a teacher, would always say that your mind is your best asset. Having the opportunity to develop it is a fundamental right, so I'm keen on open access to learning materials.
+- Food security. Nearly 1 billion people across the world face uncertainty when it comes to food availability, including 1 in 5 children in the USA.
+- My friends and family. Check out <a href="sites.google.com/view/diamondsandrust"> Diamonds and Rust </a> and <a href="aliendaydreams.life"> Alien Daydreams </a>!
+
+<!-- I'm a recent MS graduate from the University of Michigan studying Computer Science & Engineering with a background in biology. I am from Massachusetts, where I studied neuroscience and computer science at Boston University. I am currently working alongside the Probabilistic Machine Learning group at the University of Michigan working towards a method leveraging amortized variational inference to solve the problem of deep-space telescope image cataloging. I have a great interest in the latest developments in neuroscience pertaining to spatial navigation, memory and vision in general. I also 
 enjoy learning about novel probabalistic machine learning methods and their applications across a variety of domains. Big picture, my goal is to leverage my research and professional experience in 
 machine learning with my academic experience in a variety of data-processing softwares to improve ongoing work in translational medicine and our understanding of the human mind and body!
     
@@ -62,4 +73,4 @@ machine learning with my academic experience in a variety of data-processing sof
 <h1> Achievements </h1>
 <p> - Awarded Harold C. Case Scholarship offered to outstanding Boston University students in recognition of scholarly, extracurricular and research achievement. </p>
 <p> - As President of the Boston University Hindu Students Council, raised over $51,000 from the '21-'22 academic year and organized several in-person events with as many as 3,000 attendees at once in the greater Boston area. </p>
-<p> - Graduated Magna Cum Laude from Boston University with honors in neuroscience.</p>
+<p> - Graduated Magna Cum Laude from Boston University with honors in neuroscience.</p> -->
