--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@ tags: home
  -->
 
 <h2>👋 Hi there, I'm Sawan!  </h2> 
-<h3>I'm a machine learning researcher with a focus on biomolecule design and optimization.
-Currently, I'm helping design novel targeting ligands for lipid nanoparticle delivery at Atom Bioworks 🧬.</h3>
+<h3>I'm a machine learning researcher with a focus on biomolecule design and optimization. </h3>
+<h3>Currently, I'm helping design novel targeting ligands for lipid nanoparticle delivery at Atom Bioworks 🧬.</h3>
 
-When away from my computer, I'm plugging away at a book, (slowly) getting improving at the piano, or cooking something new 🍳. 
-Things I'm passionate about:
+<h4>When away from my computer, I'm plugging away at a book, (slowly) getting improving at the piano, or cooking something new 🍳. 
+Things I'm passionate about:</h4>
 
-- Learning. My grandfather, a teacher, would always say that your mind is your best asset. Having the opportunity to develop it is a fundamental right, so I'm keen on open access to learning materials.
-- Food security. Nearly 1 billion people across the world face uncertainty when it comes to food availability, including 1 in 5 children in the USA.
-- My friends and family. Check out <a href="sites.google.com/view/diamondsandrust"> Diamonds and Rust </a> and <a href="aliendaydreams.life"> Alien Daydreams </a>!
+<p>- Learning. My grandfather, a teacher, would always say that your mind is your best asset. Having the opportunity to develop it is a fundamental right, so I'm keen on open access to learning materials.</p>
+<p>- Food security. Nearly 1 billion people across the world face uncertainty when it comes to food availability, including 1 in 5 children in the USA.</p>
+<p>- My friends and family. Check out <a href="sites.google.com/view/diamondsandrust"> Diamonds and Rust </a> and <a href="aliendaydreams.life"> Alien Daydreams </a>!</p>
 
 <!-- I'm a recent MS graduate from the University of Michigan studying Computer Science & Engineering with a background in biology. I am from Massachusetts, where I studied neuroscience and computer science at Boston University. I am currently working alongside the Probabilistic Machine Learning group at the University of Michigan working towards a method leveraging amortized variational inference to solve the problem of deep-space telescope image cataloging. I have a great interest in the latest developments in neuroscience pertaining to spatial navigation, memory and vision in general. I also 
 enjoy learning about novel probabalistic machine learning methods and their applications across a variety of domains. Big picture, my goal is to leverage my research and professional experience in 
