--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@ tags: home
 <img width="400" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
 </p>
  -->
+<video width="480" height="320" controls="controls" align="center">
+<source src="http://sawanp813.github.io/AtomBioworks_Static_Draft1.mp4" type="video/mp4">
+</video>
 
 <h2>👋 Hi there, I'm Sawan!  </h2> 
 <h3>I'm a machine learning researcher with a focus on biomolecule design and optimization. </h3>
 <h3>Currently, I'm helping design novel targeting ligands for lipid nanoparticle delivery at Atom Bioworks 🧬.</h3>
 
-<h4>When away from my computer, I'm plugging away at a book, (slowly) getting improving at the piano, or cooking something new 🍳. 
-Things I'm passionate about:</h4>
+<h4>When away from my computer, I'm plugging away at a book, (slowly) getting improving at the piano, or cooking something new 🍳. </h4>
+<h4>Things I'm passionate about:</h4>
 
 <p>- Learning. My grandfather, a teacher, would always say that your mind is your best asset. Having the opportunity to develop it is a fundamental right, so I'm keen on open access to learning materials.</p>
 <p>- Food security. Nearly 1 billion people across the world face uncertainty when it comes to food availability, including 1 in 5 children in the USA.</p>
