--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ tags: home
 <img width="400" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
 </p>
  -->
-<video width="480" height="320" controls="controls" align="center">
+<video align="center" display="block" margin="auto" controls loop>
 <source src="http://sawanp813.github.io/AtomBioworks_Static_Draft1.mp4" type="video/mp4">
 </video>
 
-<h2>👋 Hi there, I'm Sawan!  </h2> 
+<h2>👋 Hey there, I'm Sawan!  </h2> 
 <h3>I'm a machine learning researcher with a focus on biomolecule design and optimization. </h3>
 <h3>Currently, I'm helping design novel targeting ligands for lipid nanoparticle delivery at Atom Bioworks 🧬.</h3>
 
