--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ tags: home
 <img width="400" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
 </p>
  -->
-<video align="center" style="width: 50%; height: 50%" display="block" margin="auto" controls loop>
+<video align="center" style="width: 200; height: 200" display="block" margin="auto" controls loop autoplay >
 <source src="http://sawanp813.github.io/AtomBioworks_Static_Draft1.mp4" type="video/mp4">
 </video>
 
