--- a/portfolio.html
+++ b/portfolio.html
@@ -40,4 +40,209 @@ js:
   {% include {{ js }} %}
   </script>
 {% endfor %} -->
-<h1 align="center"> Updating soon! </h1>
+<!-- <h1 align="center"> Updating soon! </h1> -->
+
+<h1>Travel| 🌴🛫👋 </h1>
+<h2>(I'm no professional but I'm working towards it)</h2>
+<h3>India| Jan '24
+  <p>
+    <img width="800" align="center" alt="taj" src="{{ site.url }}/images/taj.png"> 
+  </p>
+  Taj Mahal, Agra
+  <p>
+    <img width="800" align="center" alt="aleppey boat" src="{{ site.url }}/images/allepey.png"> 
+  </p>
+  Boat ride, Aleppey
+  <p>
+    <img width="800" align="center" alt="aleppey beach" src="{{ site.url }}/images/aleppeybeach.png"> 
+  </p>
+  Beach, Aleppey
+  <p>
+    <img width="800" align="center" alt="munaar" src="{{ site.url }}/images/munaar.png"> 
+  </p>
+  Tea fields, Munaar
+  <p>
+    <img width="800" align="center" alt="maniyara" src="{{ site.url }}/images/maniyara.jpg"> 
+  </p>
+  Surat, India
+</h3>
+<h3>Vancouver| Dec '24
+  <p>
+    <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.png"> 
+  </p>
+  Downtown, Vancouver
+  <p>
+    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+      <source src="http://sawanp813.github.io/images/vancouver_otter.mp4" type="video/mp4">
+    </video>
+  <p>
+  <p>
+    <img width="800" align="center" alt="aquarium" src="{{ site.url }}/images/walrus.png"> 
+  </p>
+  Aquarium, Vancouver
+  <p>
+    <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.jpg"> 
+  </p>
+  Overhead, Vancouver
+
+</h3>
+<h3>Boston| Nov '24
+  <p>
+    <img width="800" align="center" alt="Commonwealth Ave" src="{{ site.url }}/images/commave.png"> 
+  </p>
+  Commonwealth Avenue, Boston
+</h3>
+<h3>Outer Banks| July '24
+  <p>
+    <img width="800" align="center" alt="Outer Banks" src="{{ site.url }}/images/outerbanks.png"> 
+  </p>
+  Outer Banks, North Carolina
+</h3>
+<h3>Niagara Falls| Apr '24
+  <p>
+    <img width="800" align="center" alt="Niagara Falls" src="{{ site.url }}/images/niagara.png"> 
+  </p>
+</h3>
+<h3>California| Mar '24
+  <p>
+    <img width="800" align="center" alt="Santa Monica sign" src="{{ site.url }}/images/santamonicasign.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Santa Monica Pier, 1" src="{{ site.url }}/images/santamonicapier1.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Santa Monica Pier, 2" src="{{ site.url }}/images/santamonicapier2.png"> 
+  </p>
+  Santa Monica, California
+  <p>
+    <img width="800" align="center" alt="Jaguar" src="{{ site.url }}/images/jag_petersen.png"> 
+  </p>
+  Petersen Auto Museum, Los Angeles
+  <p>
+    <img width="800" align="center" alt="broad1" src="{{ site.url }}/images/broad1.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="broad2" src="{{ site.url }}/images/broad2.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="broad3" src="{{ site.url }}/images/broad3.png"> 
+  </p>
+  The Broad, Los Angeles
+  <p>
+    <img width="800" align="center" alt="El Pollo Loco" src="{{ site.url }}/images/elpolloloco.png"> 
+  </p>
+  El Pollo Loco, Los Angeles (see: Rush Hour 2)
+</h3>
+<h3>Chicago| Aug '23
+  <p>
+    <img width="800" align="center" alt="Chicago River, 1" src="{{ site.url }}/images/Screen Shot 2023-07-16 at 6.26.01 PM.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Chicago cityscape" src="{{ site.url }}/images/chicago_scape.png"> 
+  </p>
+  Downtown, Chicago
+  <p>
+    <img width="800" align="center" alt="Chicago Ferris Wheel" src="{{ site.url }}/images/chicago_ferris.png"> 
+  </p>
+  Big ferris wheel, Chicago
+</h3>
+<h3>Iceland| Aug '22
+  <p>
+    <img width="800" align="center" alt="Reykjavik Cityscape" src="{{ site.url }}/images/scape_iceland.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Mural" src="{{ site.url }}/images/mural.png"> 
+  </p>
+  Downtown Reykjavik, Iceland
+  <p>
+    <img width="800" align="center" alt="Vik1" src="{{ site.url }}/images/vik_iceland.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Vik2" src="{{ site.url }}/images/vik_river_iceland.png"> 
+  </p>
+  Vik, Iceland
+  <p>
+    <img width="800" align="center" alt="Thingvellir" src="{{ site.url }}/images/thingvellir2_iceland.png"> 
+  </p>
+  Thingvellir, Iceland
+  <p>
+    <img width="800" align="center" alt="Sejlandfoss" src="{{ site.url }}/images/sejlandfoss_iceland.png"> 
+  </p>
+  Sejlandfoss, Iceland
+  <p>
+    <img width="800" align="center" alt="Grindavik basin" src="{{ site.url }}/images/basin_iceleand.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Grindavik volcano" src="{{ site.url }}/images/grindavik_iceland.png"> 
+  </p>
+  Grindavik, Iceland
+  <p>
+    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+      <source src="http://sawanp813.github.io/images/iceland_waterfall.mp4" type="video/mp4">
+    </video>
+  </p>
+  <p>
+    <img width="800" align="center" alt="Blaskogabygga" src="{{ site.url }}/images/blaskogabygga_iceland.png"> 
+  </p>
+  Blaskogabygga, Iceland
+  <p>
+    <img width="800" align="center" alt="Glacier deposit" src="{{ site.url }}/images/glacial_iceland.png"> 
+  </p>
+  Glacier basin, Iceland
+  <p>
+    <img width="800" align="center" alt="Black sand beach" src="{{ site.url }}/images/blacksand_hawaii.png"> 
+  </p>
+  Black Sand Beach, Iceland
+</h3>
+<h3>Manhattan| Mar '22
+  <p>
+    <img width="800" align="center" alt="Brooklyn Bridge" src="{{ site.url }}/images/bklyn_bridge.png"> 
+  </p>
+  Brooklyn Bridge, New York
+  <p>
+    <img width="800" align="center" alt="Cityscape" src="{{ site.url }}/images/ny_cityscape.png"> 
+  </p>
+  Cityscape, New York
+</h3>
+<h3>Hawaii| June '21
+  <p>
+    <img width="800" align="center" alt="Ho'okipa Beach" src="{{ site.url }}/images/ho'okipa_beach_hawaii.png"> 
+  </p>
+  Ho'okipa Beach, Hawaii
+  <p>
+    <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset_hawaii.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Hawaii road" src="{{ site.url }}/images/hawaii_road.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset2_hawaii.png"> 
+  </p>
+  Roads, Hawaii
+</h3>
+<h3>India| Jan '21
+  <p>
+    <img width="800" align="center" alt="Vanesa, India" src="{{ site.url }}/images/farm.png"> 
+  </p>
+  Vanesa, India
+  <p>
+    <img width="800" align="center" alt="Statue of Unity" src="{{ site.url }}/images/statue_of_unity.png"> 
+  </p>
+  Statue of Unity, India
+</h3>
+<h3>Dubai| Dec '20
+  <p>
+    <img width="800" align="center" alt="Dubai Mall" src="{{ site.url }}/images/dubaimall.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Dubai view" src="{{ site.url }}/images/Sharjah_dubai.png"> 
+  </p>
+  <p>
+    <img width="800" align="center" alt="Sharjah" src="{{ site.url }}/images/dubai_scape.png"> 
+  </p>
+  Dubai, United Arab Emirates
+  <p>
+    <img width="800" align="center" alt="Sheikh Zayed Mosque" src="{{ site.url }}/images/sheikhzayedmosque.png"> 
+  </p>
+  Abu Dhabi, United Arab Emirates
+</h3>
