--- a/portfolio.html
+++ b/portfolio.html
@@ -42,35 +42,35 @@ js:
 {% endfor %} -->
 <!-- <h1 align="center"> Updating soon! </h1> -->
 
-<h1>Travel| 🌴🛫👋 </h1>
+<h1>Travel  🌴🛫👋 </h1>
 <h2>(I'm no professional but I'm working towards it)</h2>
-<h3>India| Jan '24
+<h3>India | Jan '24
   <p>
     <img width="800" align="center" alt="taj" src="{{ site.url }}/images/taj.png"> 
+    Taj Mahal, Agra
   </p>
-  Taj Mahal, Agra
   <p>
     <img width="800" align="center" alt="aleppey boat" src="{{ site.url }}/images/allepey.png"> 
+    Boat ride, Aleppey
   </p>
-  Boat ride, Aleppey
   <p>
     <img width="800" align="center" alt="aleppey beach" src="{{ site.url }}/images/aleppeybeach.png"> 
+    Beach, Aleppey
   </p>
-  Beach, Aleppey
   <p>
     <img width="800" align="center" alt="munaar" src="{{ site.url }}/images/munaar.png"> 
+    Tea fields, Munaar
   </p>
-  Tea fields, Munaar
   <p>
     <img width="800" align="center" alt="maniyara" src="{{ site.url }}/images/maniyara.jpg"> 
+    Surat, India
   </p>
-  Surat, India
 </h3>
 <h3>Vancouver| Dec '24
   <p>
     <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.png"> 
+    Downtown, Vancouver
   </p>
-  Downtown, Vancouver
   <p>
     <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
       <source src="http://sawanp813.github.io/images/vancouver_otter.mp4" type="video/mp4">
@@ -78,25 +78,25 @@ js:
   <p>
   <p>
     <img width="800" align="center" alt="aquarium" src="{{ site.url }}/images/walrus.png"> 
+    Aquarium, Vancouver
   </p>
-  Aquarium, Vancouver
   <p>
     <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.jpg"> 
+    Overhead, Vancouver
   </p>
-  Overhead, Vancouver
 
 </h3>
 <h3>Boston| Nov '24
   <p>
     <img width="800" align="center" alt="Commonwealth Ave" src="{{ site.url }}/images/commave.png"> 
+    Commonwealth Avenue, Boston
   </p>
-  Commonwealth Avenue, Boston
 </h3>
 <h3>Outer Banks| July '24
   <p>
     <img width="800" align="center" alt="Outer Banks" src="{{ site.url }}/images/outerbanks.png"> 
+    Outer Banks, North Carolina
   </p>
-  Outer Banks, North Carolina
 </h3>
 <h3>Niagara Falls| Apr '24
   <p>
@@ -112,12 +112,12 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Santa Monica Pier, 2" src="{{ site.url }}/images/santamonicapier2.png"> 
+    Santa Monica, California
   </p>
-  Santa Monica, California
   <p>
     <img width="800" align="center" alt="Jaguar" src="{{ site.url }}/images/jag_petersen.png"> 
+    Petersen Auto Museum, Los Angeles
   </p>
-  Petersen Auto Museum, Los Angeles
   <p>
     <img width="800" align="center" alt="broad1" src="{{ site.url }}/images/broad1.png"> 
   </p>
@@ -126,12 +126,12 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="broad3" src="{{ site.url }}/images/broad3.png"> 
+    The Broad, Los Angeles
   </p>
-  The Broad, Los Angeles
   <p>
     <img width="800" align="center" alt="El Pollo Loco" src="{{ site.url }}/images/elpolloloco.png"> 
+    El Pollo Loco, Los Angeles (see: Rush Hour 2)
   </p>
-  El Pollo Loco, Los Angeles (see: Rush Hour 2)
 </h3>
 <h3>Chicago| Aug '23
   <p>
@@ -139,12 +139,12 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Chicago cityscape" src="{{ site.url }}/images/chicago_scape.png"> 
+    Downtown, Chicago
   </p>
-  Downtown, Chicago
   <p>
     <img width="800" align="center" alt="Chicago Ferris Wheel" src="{{ site.url }}/images/chicago_ferris.png"> 
+    Big ferris wheel, Chicago
   </p>
-  Big ferris wheel, Chicago
 </h3>
 <h3>Iceland| Aug '22
   <p>
@@ -152,30 +152,30 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Mural" src="{{ site.url }}/images/mural.png"> 
+    Downtown Reykjavik, Iceland
   </p>
-  Downtown Reykjavik, Iceland
   <p>
     <img width="800" align="center" alt="Vik1" src="{{ site.url }}/images/vik_iceland.png"> 
   </p>
   <p>
     <img width="800" align="center" alt="Vik2" src="{{ site.url }}/images/vik_river_iceland.png"> 
+    Vik, Iceland
   </p>
-  Vik, Iceland
   <p>
     <img width="800" align="center" alt="Thingvellir" src="{{ site.url }}/images/thingvellir2_iceland.png"> 
+    Thingvellir, Iceland
   </p>
-  Thingvellir, Iceland
   <p>
     <img width="800" align="center" alt="Sejlandfoss" src="{{ site.url }}/images/sejlandfoss_iceland.png"> 
+    Sejlandfoss, Iceland
   </p>
-  Sejlandfoss, Iceland
   <p>
     <img width="800" align="center" alt="Grindavik basin" src="{{ site.url }}/images/basin_iceleand.png"> 
   </p>
   <p>
     <img width="800" align="center" alt="Grindavik volcano" src="{{ site.url }}/images/grindavik_iceland.png"> 
+    Grindavik, Iceland
   </p>
-  Grindavik, Iceland
   <p>
     <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
       <source src="http://sawanp813.github.io/images/iceland_waterfall.mp4" type="video/mp4">
@@ -183,32 +183,32 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Blaskogabygga" src="{{ site.url }}/images/blaskogabygga_iceland.png"> 
+    Blaskogabygga, Iceland
   </p>
-  Blaskogabygga, Iceland
   <p>
     <img width="800" align="center" alt="Glacier deposit" src="{{ site.url }}/images/glacial_iceland.png"> 
+    Glacier basin, Iceland
   </p>
-  Glacier basin, Iceland
   <p>
     <img width="800" align="center" alt="Black sand beach" src="{{ site.url }}/images/blacksand_hawaii.png"> 
+    Black Sand Beach, Iceland
   </p>
-  Black Sand Beach, Iceland
 </h3>
 <h3>Manhattan| Mar '22
   <p>
     <img width="800" align="center" alt="Brooklyn Bridge" src="{{ site.url }}/images/bklyn_bridge.png"> 
+    Brooklyn Bridge, New York
   </p>
-  Brooklyn Bridge, New York
   <p>
     <img width="800" align="center" alt="Cityscape" src="{{ site.url }}/images/ny_cityscape.png"> 
+    Cityscape, New York
   </p>
-  Cityscape, New York
 </h3>
 <h3>Hawaii| June '21
   <p>
     <img width="800" align="center" alt="Ho'okipa Beach" src="{{ site.url }}/images/ho'okipa_beach_hawaii.png"> 
+    Ho'okipa Beach, Hawaii
   </p>
-  Ho'okipa Beach, Hawaii
   <p>
     <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset_hawaii.png"> 
   </p>
@@ -217,18 +217,18 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset2_hawaii.png"> 
+    Roads, Hawaii
   </p>
-  Roads, Hawaii
 </h3>
 <h3>India| Jan '21
   <p>
     <img width="800" align="center" alt="Vanesa, India" src="{{ site.url }}/images/farm.png"> 
+    Vanesa, India
   </p>
-  Vanesa, India
   <p>
     <img width="800" align="center" alt="Statue of Unity" src="{{ site.url }}/images/statue_of_unity.png"> 
+    Statue of Unity, India
   </p>
-  Statue of Unity, India
 </h3>
 <h3>Dubai| Dec '20
   <p>
@@ -239,10 +239,10 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Sharjah" src="{{ site.url }}/images/dubai_scape.png"> 
+    Dubai, United Arab Emirates
   </p>
-  Dubai, United Arab Emirates
   <p>
     <img width="800" align="center" alt="Sheikh Zayed Mosque" src="{{ site.url }}/images/sheikhzayedmosque.png"> 
+    Sheikh Zayed Mosque, Abu Dhabi, United Arab Emirates
   </p>
-  Abu Dhabi, United Arab Emirates
 </h3>
