fix to travel, update resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,29 +47,29 @@ js:
 <h3>India | Jan '24
   <p>
     <img width="800" align="center" alt="taj" src="{{ site.url }}/images/taj.png"> 
-    Taj Mahal, Agra
+    <p>Taj Mahal, Agra</p>
   </p>
   <p>
-    <img width="800" align="center" alt="aleppey boat" src="{{ site.url }}/images/allepey.png"> 
-    Boat ride, Aleppey
+    <img width="800" align="center" alt="aleppey boat" src="{{ site.url }}/images/aleppey.png"> 
+    <p>Boat ride, Aleppey</p>
   </p>
   <p>
     <img width="800" align="center" alt="aleppey beach" src="{{ site.url }}/images/aleppeybeach.png"> 
-    Beach, Aleppey
+    <p>Boat ride, Aleppey</p>
   </p>
   <p>
     <img width="800" align="center" alt="munaar" src="{{ site.url }}/images/munaar.png"> 
-    Tea fields, Munaar
+    <p>Tea fields, Munaar</p>
   </p>
   <p>
     <img width="800" align="center" alt="maniyara" src="{{ site.url }}/images/maniyara.jpg"> 
-    Surat, India
+    <p>Surat, India</p>
   </p>
 </h3>
 <h3>Vancouver| Dec '24
   <p>
     <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.png"> 
-    Downtown, Vancouver
+    <p>Downtown, Vancouver</p>
   </p>
   <p>
     <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
@@ -78,24 +78,24 @@ js:
   <p>
   <p>
     <img width="800" align="center" alt="aquarium" src="{{ site.url }}/images/walrus.png"> 
-    Aquarium, Vancouver
+    <p>Aquarium, Vancouver</p>
   </p>
   <p>
     <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.jpg"> 
-    Overhead, Vancouver
+    <p>Aquarium, Vancouver</p>>
   </p>
 
 </h3>
 <h3>Boston| Nov '24
   <p>
     <img width="800" align="center" alt="Commonwealth Ave" src="{{ site.url }}/images/commave.png"> 
-    Commonwealth Avenue, Boston
+    <p>Commonwealth Avenue, Boston</p>
   </p>
 </h3>
 <h3>Outer Banks| July '24
   <p>
     <img width="800" align="center" alt="Outer Banks" src="{{ site.url }}/images/outerbanks.png"> 
-    Outer Banks, North Carolina
+    <p>Outer Banks, North Carolina</p>
   </p>
 </h3>
 <h3>Niagara Falls| Apr '24
@@ -112,11 +112,11 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Santa Monica Pier, 2" src="{{ site.url }}/images/santamonicapier2.png"> 
-    Santa Monica, California
+    <p>Santa Monica, California</p>
   </p>
   <p>
     <img width="800" align="center" alt="Jaguar" src="{{ site.url }}/images/jag_petersen.png"> 
-    Petersen Auto Museum, Los Angeles
+    <p>Petersen Auto Museum, Los Angeles</p>
   </p>
   <p>
     <img width="800" align="center" alt="broad1" src="{{ site.url }}/images/broad1.png"> 
@@ -126,11 +126,11 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="broad3" src="{{ site.url }}/images/broad3.png"> 
-    The Broad, Los Angeles
+    <p>The Broad, Los Angeles</p>
   </p>
   <p>
     <img width="800" align="center" alt="El Pollo Loco" src="{{ site.url }}/images/elpolloloco.png"> 
-    El Pollo Loco, Los Angeles (see: Rush Hour 2)
+    <p>El Pollo Loco, Los Angeles (see: Rush Hour 2)</p>
   </p>
 </h3>
 <h3>Chicago| Aug '23
@@ -139,11 +139,11 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Chicago cityscape" src="{{ site.url }}/images/chicago_scape.png"> 
-    Downtown, Chicago
+    <p>Downtown, Chicago</p>
   </p>
   <p>
     <img width="800" align="center" alt="Chicago Ferris Wheel" src="{{ site.url }}/images/chicago_ferris.png"> 
-    Big ferris wheel, Chicago
+    <p>Big ferris wheel, Chicago</p>
   </p>
 </h3>
 <h3>Iceland| Aug '22
@@ -152,29 +152,29 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Mural" src="{{ site.url }}/images/mural.png"> 
-    Downtown Reykjavik, Iceland
+    <p>Downtown Reykjavik, Iceland</p>
   </p>
   <p>
     <img width="800" align="center" alt="Vik1" src="{{ site.url }}/images/vik_iceland.png"> 
   </p>
   <p>
     <img width="800" align="center" alt="Vik2" src="{{ site.url }}/images/vik_river_iceland.png"> 
-    Vik, Iceland
+    <p>Vik, Iceland</p>
   </p>
   <p>
     <img width="800" align="center" alt="Thingvellir" src="{{ site.url }}/images/thingvellir2_iceland.png"> 
-    Thingvellir, Iceland
+    <p>Thingvellir, Iceland</p>
   </p>
   <p>
     <img width="800" align="center" alt="Sejlandfoss" src="{{ site.url }}/images/sejlandfoss_iceland.png"> 
-    Sejlandfoss, Iceland
+    <p>Sejlandfoss, Iceland</p>
   </p>
   <p>
     <img width="800" align="center" alt="Grindavik basin" src="{{ site.url }}/images/basin_iceleand.png"> 
   </p>
   <p>
     <img width="800" align="center" alt="Grindavik volcano" src="{{ site.url }}/images/grindavik_iceland.png"> 
-    Grindavik, Iceland
+    <p>Grindavik, Iceland</p>
   </p>
   <p>
     <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
@@ -183,31 +183,31 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Blaskogabygga" src="{{ site.url }}/images/blaskogabygga_iceland.png"> 
-    Blaskogabygga, Iceland
+    <p>Blaskogabygga, Iceland</p>
   </p>
   <p>
     <img width="800" align="center" alt="Glacier deposit" src="{{ site.url }}/images/glacial_iceland.png"> 
-    Glacier basin, Iceland
+    <p>Glacier basin, Iceland</p>
   </p>
   <p>
     <img width="800" align="center" alt="Black sand beach" src="{{ site.url }}/images/blacksand_hawaii.png"> 
-    Black Sand Beach, Iceland
+    <p>Black Sand Beach, Iceland</p>
   </p>
 </h3>
 <h3>Manhattan| Mar '22
   <p>
     <img width="800" align="center" alt="Brooklyn Bridge" src="{{ site.url }}/images/bklyn_bridge.png"> 
-    Brooklyn Bridge, New York
+    <p>Brooklyn Bridge, New York</p>
   </p>
   <p>
     <img width="800" align="center" alt="Cityscape" src="{{ site.url }}/images/ny_cityscape.png"> 
-    Cityscape, New York
+    <p>Cityscape, New York</p>
   </p>
 </h3>
 <h3>Hawaii| June '21
   <p>
     <img width="800" align="center" alt="Ho'okipa Beach" src="{{ site.url }}/images/ho'okipa_beach_hawaii.png"> 
-    Ho'okipa Beach, Hawaii
+    <p>Ho'okipa Beach, Hawaii</p>
   </p>
   <p>
     <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset_hawaii.png"> 
@@ -217,17 +217,17 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/sunset2_hawaii.png"> 
-    Roads, Hawaii
+    <p>Roads, Hawaii</p>
   </p>
 </h3>
 <h3>India| Jan '21
   <p>
     <img width="800" align="center" alt="Vanesa, India" src="{{ site.url }}/images/farm.png"> 
-    Vanesa, India
+    <p>Vanesa, India</p>
   </p>
   <p>
     <img width="800" align="center" alt="Statue of Unity" src="{{ site.url }}/images/statue_of_unity.png"> 
-    Statue of Unity, India
+    <p>Statue of Unity, India</p>
   </p>
 </h3>
 <h3>Dubai| Dec '20
@@ -239,10 +239,10 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="Sharjah" src="{{ site.url }}/images/dubai_scape.png"> 
-    Dubai, United Arab Emirates
+    <p>Dubai, United Arab Emirates</p>
   </p>
   <p>
     <img width="800" align="center" alt="Sheikh Zayed Mosque" src="{{ site.url }}/images/sheikhzayedmosque.png"> 
-    Sheikh Zayed Mosque, Abu Dhabi, United Arab Emirates
+    <p>Sheikh Zayed Mosque, Abu Dhabi, United Arab Emirates</p>
   </p>
 </h3>
