--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,12 @@
 ---
-layout: default_design
+layout: default
 title: Travel
 tags: portfolio
 permalink: /travel/
 js:
+- js/gh_projects.js
 - js/util_buttons.js
+---
 ---
 
 <!-- <ul class="projects clearfix">
@@ -44,7 +46,7 @@ js:
 
 <h1>Travel  🌴🛫👋 </h1>
 <h2>(I'm no professional but I'm working towards it)</h2>
-<h3>India | Jan '24
+<h3 align="center">India | Jan '24
   <p>
     <img width="800" align="center" alt="taj" src="{{ site.url }}/images/taj.png"> 
     <p>Taj Mahal, Agra</p>
@@ -66,7 +68,7 @@ js:
     <p>Surat, India</p>
   </p>
 </h3>
-<h3>Vancouver| Dec '24
+<h3 align="center">Vancouver| Dec '24
   <p>
     <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.png"> 
     <p>Downtown, Vancouver</p>
@@ -86,24 +88,24 @@ js:
   </p>
 
 </h3>
-<h3>Boston| Nov '24
+<h3 align="center">Boston| Nov '24
   <p>
     <img width="800" align="center" alt="Commonwealth Ave" src="{{ site.url }}/images/commave.png"> 
     <p>Commonwealth Avenue, Boston</p>
   </p>
 </h3>
-<h3>Outer Banks| July '24
+<h3 align="center">Outer Banks| July '24
   <p>
     <img width="800" align="center" alt="Outer Banks" src="{{ site.url }}/images/outerbanks.png"> 
     <p>Outer Banks, North Carolina</p>
   </p>
 </h3>
-<h3>Niagara Falls| Apr '24
+<h3 align="center">Niagara Falls| Apr '24
   <p>
     <img width="800" align="center" alt="Niagara Falls" src="{{ site.url }}/images/niagara.png"> 
   </p>
 </h3>
-<h3>California| Mar '24
+<h3 align="center">California| Mar '24
   <p>
     <img width="800" align="center" alt="Santa Monica sign" src="{{ site.url }}/images/santamonicasign.png"> 
   </p>
@@ -133,7 +135,7 @@ js:
     <p>El Pollo Loco, Los Angeles (see: Rush Hour 2)</p>
   </p>
 </h3>
-<h3>Chicago| Aug '23
+<h3 align="center">Chicago| Aug '23
   <p>
     <img width="800" align="center" alt="Chicago River, 1" src="{{ site.url }}/images/Screen Shot 2023-07-16 at 6.26.01 PM.png"> 
   </p>
@@ -146,7 +148,7 @@ js:
     <p>Big ferris wheel, Chicago</p>
   </p>
 </h3>
-<h3>Iceland| Aug '22
+<h3 align="center">Iceland| Aug '22
   <p>
     <img width="800" align="center" alt="Reykjavik Cityscape" src="{{ site.url }}/images/scape_iceland.png"> 
   </p>
@@ -194,7 +196,7 @@ js:
     <p>Black Sand Beach, Iceland</p>
   </p>
 </h3>
-<h3>Manhattan| Mar '22
+<h3 align="center">Manhattan| Mar '22
   <p>
     <img width="800" align="center" alt="Brooklyn Bridge" src="{{ site.url }}/images/bklyn_bridge.png"> 
     <p>Brooklyn Bridge, New York</p>
@@ -204,7 +206,7 @@ js:
     <p>Cityscape, New York</p>
   </p>
 </h3>
-<h3>Hawaii| June '21
+<h3 align="center">Hawaii| June '21
   <p>
     <img width="800" align="center" alt="Ho'okipa Beach" src="{{ site.url }}/images/ho'okipa_beach_hawaii.png"> 
     <p>Ho'okipa Beach, Hawaii</p>
@@ -220,7 +222,7 @@ js:
     <p>Roads, Hawaii</p>
   </p>
 </h3>
-<h3>India| Jan '21
+<h3 align="center">India| Jan '21
   <p>
     <img width="800" align="center" alt="Vanesa, India" src="{{ site.url }}/images/farm.png"> 
     <p>Vanesa, India</p>
@@ -230,7 +232,7 @@ js:
     <p>Statue of Unity, India</p>
   </p>
 </h3>
-<h3>Dubai| Dec '20
+<h3 align="center">Dubai| Dec '20
   <p>
     <img width="800" align="center" alt="Dubai Mall" src="{{ site.url }}/images/dubaimall.png"> 
   </p>
