--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@ js:
     <p>Surat, India</p>
   </p>
 </h3>
-<h3 align="center">Vancouver| Dec '24
+<h3 align="center">Vancouver | Dec '24
   <p>
     <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.png"> 
     <p>Downtown, Vancouver</p>
@@ -88,24 +88,24 @@ js:
   </p>
 
 </h3>
-<h3 align="center">Boston| Nov '24
+<h3 align="center">Boston | Nov '24
   <p>
     <img width="800" align="center" alt="Commonwealth Ave" src="{{ site.url }}/images/commave.png"> 
     <p>Commonwealth Avenue, Boston</p>
   </p>
 </h3>
-<h3 align="center">Outer Banks| July '24
+<h3 align="center">Outer Banks | July '24
   <p>
     <img width="800" align="center" alt="Outer Banks" src="{{ site.url }}/images/outerbanks.png"> 
     <p>Outer Banks, North Carolina</p>
   </p>
 </h3>
-<h3 align="center">Niagara Falls| Apr '24
+<h3 align="center">Niagara Falls | Apr '24
   <p>
     <img width="800" align="center" alt="Niagara Falls" src="{{ site.url }}/images/niagara.png"> 
   </p>
 </h3>
-<h3 align="center">California| Mar '24
+<h3 align="center">California | Mar '24
   <p>
     <img width="800" align="center" alt="Santa Monica sign" src="{{ site.url }}/images/santamonicasign.png"> 
   </p>
@@ -135,9 +135,9 @@ js:
     <p>El Pollo Loco, Los Angeles (see: Rush Hour 2)</p>
   </p>
 </h3>
-<h3 align="center">Chicago| Aug '23
+<h3 align="center">Chicago | Aug '23
   <p>
-    <img width="800" align="center" alt="Chicago River, 1" src="{{ site.url }}/images/Screen Shot 2023-07-16 at 6.26.01 PM.png"> 
+    <img width="800" align="center" alt="Chicago River, 1" src="{{ site.url }}/images/chicago_river1.png"> 
   </p>
   <p>
     <img width="800" align="center" alt="Chicago cityscape" src="{{ site.url }}/images/chicago_scape.png"> 
@@ -148,13 +148,18 @@ js:
     <p>Big ferris wheel, Chicago</p>
   </p>
 </h3>
-<h3 align="center">Iceland| Aug '22
+<h3 align="center">Iceland | Aug '22
   <p>
     <img width="800" align="center" alt="Reykjavik Cityscape" src="{{ site.url }}/images/scape_iceland.png"> 
   </p>
   <p>
     <img width="800" align="center" alt="Mural" src="{{ site.url }}/images/mural.png"> 
     <p>Downtown Reykjavik, Iceland</p>
+  </p>
+  <p>
+    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+      <source src="http://sawanp813.github.io/images/vik.mp4" type="video/mp4">
+    </video>
   </p>
   <p>
     <img width="800" align="center" alt="Vik1" src="{{ site.url }}/images/vik_iceland.png"> 
@@ -195,6 +200,12 @@ js:
     <img width="800" align="center" alt="Black sand beach" src="{{ site.url }}/images/blacksand_hawaii.png"> 
     <p>Black Sand Beach, Iceland</p>
   </p>
+  <p>
+    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+      <source src="http://sawanp813.github.io/images/IMG_8219.mp4" type="video/mp4">
+    </video>
+    <p>Countryside, Iceland</p>
+  </p>
 </h3>
 <h3 align="center">Manhattan| Mar '22
   <p>
@@ -206,7 +217,13 @@ js:
     <p>Cityscape, New York</p>
   </p>
 </h3>
-<h3 align="center">Hawaii| June '21
+<h3 align="center">Hawaii | June '21
+  <p>
+    <video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+      <source src="http://sawanp813.github.io/images/IMG_5275.mp4" type="video/mp4">
+    </video>
+    <p>Shipwreck, Hawaii</p>
+  </p>
   <p>
     <img width="800" align="center" alt="Ho'okipa Beach" src="{{ site.url }}/images/ho'okipa_beach_hawaii.png"> 
     <p>Ho'okipa Beach, Hawaii</p>
@@ -222,7 +239,7 @@ js:
     <p>Roads, Hawaii</p>
   </p>
 </h3>
-<h3 align="center">India| Jan '21
+<h3 align="center">India | Jan '21
   <p>
     <img width="800" align="center" alt="Vanesa, India" src="{{ site.url }}/images/farm.png"> 
     <p>Vanesa, India</p>
@@ -232,7 +249,7 @@ js:
     <p>Statue of Unity, India</p>
   </p>
 </h3>
-<h3 align="center">Dubai| Dec '20
+<h3 align="center">Dubai | Dec '20
   <p>
     <img width="800" align="center" alt="Dubai Mall" src="{{ site.url }}/images/dubaimall.png"> 
   </p>
