--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@ js:
   </p>
   <p>
     <img width="800" align="center" alt="aleppey beach" src="{{ site.url }}/images/aleppeybeach.png"> 
-    <p>Boat ride, Aleppey</p>
+    <p>Beach, Aleppey</p>
   </p>
   <p>
     <img width="800" align="center" alt="munaar" src="{{ site.url }}/images/munaar.png"> 
@@ -83,8 +83,8 @@ js:
     <p>Aquarium, Vancouver</p>
   </p>
   <p>
-    <img width="800" align="center" alt="convention center" src="{{ site.url }}/images/vancouver.jpg"> 
-    <p>Aquarium, Vancouver</p>>
+    <img width="800" align="center" alt="overhead" src="{{ site.url }}/images/vancouver.jpg"> 
+    <p>Overhead, Vancouver</p>
   </p>
 
 </h3>
@@ -207,7 +207,7 @@ js:
     <p>Countryside, Iceland</p>
   </p>
 </h3>
-<h3 align="center">Manhattan| Mar '22
+<h3 align="center">Manhattan | Mar '22
   <p>
     <img width="800" align="center" alt="Brooklyn Bridge" src="{{ site.url }}/images/bklyn_bridge.png"> 
     <p>Brooklyn Bridge, New York</p>
