--- a/portfolio.html
+++ b/portfolio.html
@@ -153,7 +153,7 @@ js:
     <img width="800" align="center" alt="Reykjavik Cityscape" src="{{ site.url }}/images/scape_iceland.png"> 
   </p>
   <p>
-    <img width="800" align="center" alt="Mural" src="{{ site.url }}/images/mural.png"> 
+    <img width="800" align="center" alt="Mural" src="{{ site.url }}/images/mural_iceland.png"> 
     <p>Downtown Reykjavik, Iceland</p>
   </p>
   <p>
@@ -249,7 +249,7 @@ js:
     <p>Statue of Unity, India</p>
   </p>
 </h3>
-<h3 align="center">Dubai | Dec '20
+<h3 align="center">United Arab Emirates | Dec '20
   <p>
     <img width="800" align="center" alt="Dubai Mall" src="{{ site.url }}/images/dubaimall.png"> 
   </p>
