Fix grammar error + update resume

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ tags: home
 </video>
 
 <h2>👋 Hey there, I'm Sawan!  </h2> 
-<h3>I'm a machine learning researcher with a focus on biomolecule design and optimization. </h3>
-<h3>Currently, I'm helping design novel targeting ligands for lipid nanoparticle delivery at Atom Bioworks 🧬.</h3>
+<h3>I'm a machine learning researcher with a focus on biomolecule design and optimization. Currently, I'm helping design novel targeting ligands for lipid nanoparticle delivery at Atom Bioworks 🧬.</h3>
+<!-- <h3>Currently, I'm helping design novel targeting ligands for lipid nanoparticle delivery at Atom Bioworks 🧬.</h3> -->
 
-<h4>When away from my computer, I'm plugging away at a book, (slowly) getting improving at the piano, or cooking something new 🍳. </h4>
+<h4>When away from my computer, I'm plugging away at a book, practicing the piano, or cooking something new 🍳. </h4>
 <h4>Things I'm passionate about:</h4>
 
 <p>- Learning. My grandfather, a teacher, would always say that your mind is your best asset. Having the opportunity to develop it is a fundamental right, so I'm keen on open access to learning materials.</p>
