--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@ js:
 <!-- <h1 align="center"> Updating soon! </h1> -->
 
 <h1>Travel  🌴🛫👋 </h1>
-<h2>(I'm no professional but I'm working towards it)</h2>
+<h2>(By no means a professional photographer - but I'm working towards it.)</h2>
 <h3 align="center">India | Jan '25
   <p>
     <img width="800" align="center" alt="taj" src="{{ site.url }}/images/taj.png"> 
