--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ tags: home
 <img width="400" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
 </p>
  -->
-<video align="center" width="800" height="600" display="block" margin="auto" loop autoplay muted>
+<video align="center" width="100%" height="600" display="block" margin="auto" loop autoplay muted>
 <source src="http://sawanp813.github.io/AtomBioworks_Static_Draft1.mp4" type="video/mp4">
 </video>
 
